2007-11-18  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkLayout.c(TTKInitPadding): BUGFIX: 
	Ttk_GetPaddingFromObj() and Ttk_GetBorderFromObj() returned 
	garbage when passed an empty list.

2007-11-18  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSXTheme.c: Resynchronize with Tile codebase
	so that patches can flow back and forth.

	* library/ttk/aquaTheme.tcl: Extra TButton -padding no longer needed.

2007-11-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/ttkWinXPTheme.c: Add support for size information flags for
	scrollbar and combobox buttons. This handles tile patches 1596647
	and 1596657 but a bit more generically.

2007-11-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/(tkArgv.c, tkBind.c, tkCipboard.c, tkEntry.c, tkOption.c,
	tkScale.c, tkScrollbar.c, tkTextImage.c, tkVisual.c, tkWindow.c):
	Tidy up some variable types.

	* generic/tkFont.c: Only check for -displayof if there are
	* test/font.test:   sufficient arguments. This permits checking
	                    strings like -d.

2007-11-17  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/scrollbar.tcl: Swap in core scrollbars for 
	[ttk::scrollbar]s on OSX.

2007-11-16  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* macosx/tkMacOSXFont.c (TkpMeasureCharsInContext): Correct an
	oversight in the bug fix from 2007-11-11.  [Bug 1824638]

2007-11-15  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.xcodeproj/project.pbxproj: add new chanio.test.
	* macosx/Wish.xcode/project.pbxproj:

2007-11-14  Donal K. Fellows  <dkf@users.sf.net>

	* library/msgs/sv.msg: Get the locale declared within the message
	catalog correct! [Bug 1831803]

2007-11-11  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* macosx/tkMacOSXFont.c (TkpMeasureCharsInContext): Fix the case when
	TK_WHOLE_WORDS and TK_AT_LEAST_ONE are both set and maxLength is
	small. [Bug 1824638]
